Updated footer symbols

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: AboutMe
 email: wyatt.petryshen@ucalgary.ca
 description: > # this means to ignore newlines until "baseurl:"
-  This page gives readers an overview of my work, current interests, and future aspirations. Continue reading to learn more!
+  This page provides readers an overview of my work, current interests, and future aspirations. Continue reading to learn more!
 baseurl: "/AboutMePage/" # the subpath of your site, e.g. /blog/
 url: "https://wyattsp.github.io" # the base hostname & protocol for your site
 
@@ -11,7 +11,7 @@ owner: Wyatt Petryshen
 email: wyatt.petryshen@ucalgary.ca
 github_username: WyattSP
 research_gate: Wyatt Petryshen
-  # Feel free to add more lines here 
+  # Feel free to add more lines here
 
 # API settings
 google_api_key:
