--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,11 @@ google_api_key:
 
 # Build settings
 markdown: kramdown
+
+relative_links:
+  enable: true
+  collections: true
+
+include:
+  -research.md
+  
