--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: AboutMe
 email: wyatt.petryshen@ucalgary.ca
 description: > # this means to ignore newlines until "baseurl:"
   This page provides readers an overview of my work, current interests, and future aspirations. Continue reading to learn more!
-baseurl: "/Wyatt-Petryshen/" # the subpath of your site, e.g. /blog/
+baseurl: "/Wyatt-Petryshen" # the subpath of your site, e.g. /blog/
 url: "https://wyattsp.github.io" # the base hostname & protocol for your site
 
 # User setting
